Fixed issue in Pokemon does have move message not fitting in move textbox

--- a/src/public/home.css
+++ b/src/public/home.css
@@ -65,6 +65,7 @@ body{
 #move-search-input{
     border-radius:5px;
     padding:5px;
+    width:15%;
 }
 #move-search-btn, #show-all-moves-btn{
     border-radius:5px;
